<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_nombre"
        android:hint="@string/str_nombre"
        android:textColor="#E3BE09"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_texto"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#261D83"
        android:textStyle="bold"
        android:textSize="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/str_texto2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/ckb_op1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_op1"
        android:checked="false" />
    <CheckBox
        android:id="@+id/ckb_op2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_op2"
        android:checked="false" />
    <CheckBox
        android:id="@+id/ckb_op3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_op3"
        android:checked="false" />
    <CheckBox
        android:id="@+id/ckb_op4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_op4"
        android:checked="false" />
    <CheckBox
        android:id="@+id/ckb_op5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_op5"
        android:checked="false"/>
    <CheckBox
        android:id="@+id/ckb_op6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_op6"
        android:checked="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_enviar"
        android:hint="@string/str_send"/>

</LinearLayout>
